--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "vue-cli-service serve",
+    "dev": "vue-cli-service serve --open",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "vant": "^2.10.3",
     "vue": "^2.6.11",
@@ -40,6 +41,7 @@
     "less": "^3.12.2",
     "less-loader": "^7.0.0",
     "mockjs": "^1.1.0",
+    "ts-loader": "^8.0.3",
     "typescript": "~3.9.3",
     "vue-template-compiler": "^2.6.11"
   }
